--- a/stats.html
+++ b/stats.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Stats exampple</title>
+	<title>Stats page</title>
 </head>
 <body>
 	<script src="stats.js"></script>
