Added structure for Gallery-page, inserted iframe, set first basic metric

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <header>
             <p elementtiming="first-header-text">Initial Page</p>
             <div class="navigation-menu">
-                <button class="original-button disabled-button" disabled>History</button>
+                <button class="original-button disabled-button" disabled>Home</button>
                 <button class="original-button"><a href="Pages/history.html">History</a></button>
                 <button class="original-button"><a href="Pages/gallery.html">Gallery</a></button>
                 <button class="original-button"><a href="Pages/about.html">About</a></button>
