--- a/src/Pages/history.html
+++ b/src/Pages/history.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Web site for Perfomance-tests" />
         <meta name="keywords" content="Perfomance, tests, optimization, metrics, History-page, space" />
     
-        <title>Test Site - History page</title>
+        <title>Perfomance test Site - History Page</title>
         <link rel="stylesheet" href="../index.css">
         <link rel="stylesheet" href="history.css">
     </head>
@@ -20,8 +20,8 @@
             <div class="navigation-menu">
                 <button class="original-button"><a href="../index.html">Home</a></button>
                 <button class="original-button disabled-button" disabled>History</a></button>
-                <button class="original-button"><a href="Pages/gallery.html">Gallery</a></button>
-                <button class="original-button"><a href="Pages/about.html">About</a></button>
+                <button class="original-button"><a href="./gallery.html">Gallery</a></button>
+                <button class="original-button"><a href="./about.html">About</a></button>
             </div>
         </header>
         
