--- a/src/Pages/history.html
+++ b/src/Pages/history.html
@@ -21,7 +21,7 @@
                 <button class="original-button"><a href="../index.html">Home</a></button>
                 <button class="original-button disabled-button" disabled>History</a></button>
                 <button class="original-button"><a href="./gallery.html">Gallery</a></button>
-                <button class="original-button"><a href="./about.html">About</a></button>
+                <button class="original-button"><a href="../../send.html">Send</a></button>
             </div>
         </header>
         
