--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 <button class="original-button disabled-button" disabled>Home</button>
                 <button class="original-button"><a href="Pages/history.html">History</a></button>
                 <button class="original-button"><a href="Pages/gallery.html">Gallery</a></button>
-                <button class="original-button"><a href="Pages/about.html">About</a></button>
+                <button class="original-button"><a href="../send.html">Send</a></button>
             </div>
         </header>
         
