--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 browserCookie: browserInfo.browserCookie,
                 mobile: browserInfo.mobile,
             //For Session
-                user: 'User',
+                user: 'User - ' + String(Math.floor(Math.random() * (6 - 1)) + 1),
                 sessionId: 'User-pochemypotomy123'
             });
 
@@ -95,27 +95,55 @@
     //Paint Timing API
         //First paint: when user sees anything at all that’s not the browser’s default background.
         //First contentful paint: when user sees something “contentful”, like an image or text (DIV with a background color isn't “contentful”)
-        
+        (function getPaintTimingMetrics() {
+            let observer = new PerformanceObserver((list) => {
+                const perfEntries = list.getEntries();
+                for (const perfEntry of perfEntries) {
+                    if(perfEntry.name === 'first-paint') {
+                        counter.send('FirstPaint', perfEntry.startTime.toFixed(4));
+                        console.log('First-paint -', perfEntry.startTime.toFixed(4), 'msec');
+                    }
+                    else if(perfEntry.name === 'first-contentful-paint') {
+                        counter.send('FirstContentfulPaint', perfEntry.startTime.toFixed(4));
+                        console.log('First Contentful Paint -', perfEntry.startTime.toFixed(4), 'msec');
+                    }
+                }
+            });
+            observer.observe({entryTypes: ["paint"]});
+        })();
+
     // This function returns timings of rendering some elements of page (first in Header, first in Content and last in Footer)    
         (function getContentfulTimings() {
-            const observer = new PerformanceObserver((list) => {
+            let observer = new PerformanceObserver((list) => {
                 let entries = list.getEntriesByName('text-paint');
                 for(let i = 0; i < entries.length; i++) {
                     if(entries[i].identifier === 'first-header-text') {
                         counter.send('FirstContentfulHeader', (entries[i].renderTime).toFixed(4));
+                        console.log('First Contentful Header -', (entries[i].renderTime).toFixed(4), 'msec');
                         continue;
                     }
                     else if(entries[i].identifier === 'first-content-text') {
                         counter.send('FirstContentfulContent', (entries[i].renderTime).toFixed(4));
+                        console.log('First Contentful Content -', (entries[i].renderTime).toFixed(4), 'msec');
                         continue;
                     }
                     else {
                         counter.send('LastContentfulFooter', (entries[i].renderTime).toFixed(4));
+                        console.log('Last Contentful Footer -', (entries[i].renderTime).toFixed(4), 'msec');
                     }
                 }
             });
             observer.observe({entryTypes: ["element"]});
         })();
+
+// This will calculate Larjest Contentful Metric (what has larjest rendering time) after 60 sec after button click.
+//In elements for choise it takes only that is seemed to user (that's on screen) whithout scrolling, clicking and so on
+        new PerformanceObserver((entryList) => {
+			for (const entry of entryList.getEntries()) {
+			    console.log('LCP candidate:', entry.startTime, entry);
+			    counter.send('LCP', entry.startTime);
+			}
+		}).observe({type: 'largest-contentful-paint', buffered: true});
         </script>
     </body>
 </html>
